# mcp-server-sqlserver

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml
configs/: settings.py
models/: app_transport.py  enum.py
